[gd_scene load_steps=21 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scenes/MiniUfo.gd" type="Script" id=2]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0005.png" type="Texture" id=3]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0004.png" type="Texture" id=4]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0008.png" type="Texture" id=5]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0001.png" type="Texture" id=6]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0006.png" type="Texture" id=7]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0007.png" type="Texture" id=8]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0011.png" type="Texture" id=9]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0009.png" type="Texture" id=10]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0002.png" type="Texture" id=11]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0000.png" type="Texture" id=12]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0010.png" type="Texture" id=13]
[ext_resource path="res://Animations/FX/WalkPoof/ground_poof0003.png" type="Texture" id=14]
[ext_resource path="res://Scenes/AlienBomb.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 106, 35 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Spin"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 6 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="Animation" id=6]
resource_name = "hit"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="MiniUfo" type="StaticBody2D" groups=["enemy"]]
script = ExtResource( 2 )
Bomb = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -5 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
scale = Vector2( 1, 0.2 )

[node name="Sprite" type="Sprite" parent="Position2D"]
position = Vector2( 0.500004, -5 )
rotation = 6.28319
scale = Vector2( 3, 3 )
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Spin"
anims/RESET = SubResource( 2 )
anims/Spin = SubResource( 3 )

[node name="Die" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 4 )
frame = 11

[node name="BombTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="BombSpawn" type="Position2D" parent="."]
position = Vector2( -1, 58 )

[node name="Hit" type="AnimationPlayer" parent="."]
anims/hit = SubResource( 6 )

[connection signal="animation_finished" from="Die" to="." method="_on_Die_animation_finished"]
[connection signal="timeout" from="BombTimer" to="." method="_on_BombTimer_timeout"]
